--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
 hello world again
 lets make another commit oooo
+ <!DOCTYPE html>
+<html lang="en-US">
+        <head>
+            <meta charset ="utf-8"/>
+            <title > my super amzing website</title>
+
+
+        </head>
+            <body>
+                <h1>
+                    this is a level 2 heading
+                </h1>
+                <p>
+                    this is my first paragraph
+                </p>
+            </body>
+</html>
+
