--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@ lets make another commit oooo
 <html lang="en-US">
         <head>
             <meta charset ="utf-8"/>
-            <title > my super amzing website</title>
+            <meta 
+            name = "viewport"
+            content="width=device-width, initial-scale=1"
+            <style>
+                img {
+                    width:100%;
+                    height:auto;
+                    
+                }
+            </style>
+            <title> my super amzing website</title>
 
 
         </head>
             <body>
+                <header>
+                    <nav>
+                        <ul>
+                            <li><a href="index2.html">Home</li>
+                                 
+                        </ul>
+                    </nav>
+                </header>
+                <main>
+                    <h1>MY PORTFOLIO</h1>
+                    <P>
+                        THIS IS MY PORT FOLIO
+                    </P>
+                    <img src="img/img_ferrari.jpg" alt="a car img_ferrari">
+                </main>
                 <h1>
                     this is a level 2 heading
                 </h1>
